@@ -2,7 +2,7 @@
 // Licensed under the GNU LGPL Version 2.1.
 //
 // First added:  2006-06-21
-// Last changed: 2008-04-21
+// Last changed: 2008-05-02
 
 #ifndef __BOUNDARY_COMPUTATION_H
 #define __BOUNDARY_COMPUTATION_H
@@ -26,6 +26,12 @@ namespace dolfin
     
     /// Compute the boundary of a given mesh
     static void computeBoundary(Mesh& mesh, BoundaryMesh& boundary);
+
+    /// Compute the boundary of a given mesh, including a mapping from
+    /// the vertices of the boundary to the corresponding mesh
+    /// entities in the original mesh
+    static void computeBoundary(Mesh& mesh, BoundaryMesh& boundary,
+                                MeshFunction<uint>& vertex_map);
 
     /// Compute the boundary of a given mesh, including a pair of mappings
     /// from the vertices and cells of the boundary to the corresponding
