@@ -1,3 +1,4 @@
+ - Add ALE mesh interpolation (moving mesh according to new boundary coordinates)
 0.7.3 [2008-04-30]
  - Bug fix for order of values in interpolate_vertex_values, now according to UFC
  - Boundary meshes are now always oriented with respect to outward facet normals
